Added program to search for unusual characters that are not human detectable

** Changed
Expanded stage0 web IDE to include the PC and instruction counter
Performance tuned hex1 to reduce both size and instruction count
Performance tuned hex0 to reduce both size and instruction count
Performance tuned hex2 to reduce both size and isntruction count

** Fixed
Fixed behavior of R@ thanks to reepca
Updated changed checksums for stage2 FORTH
Corrected behavior when using the web IDE and attempting to set registers that don't exist
Fixed regression in hex.c caused by refactoring
Fixed output of large negative numbers in hex
Updated checksums to reflect changed made in performance tuning
Fixed M0 performance by a factor of 4

** Removed
Removed stage1_assembler-0's need for Memory and reduced size of program while at it
Removed stage1_assembler-1's hex1 implementation as it ended up being useless in bootstrapping
Removed stage1_assembler-2's hex0 and hex2 implementation as it ended up being useless in bootstrapping
Removed Checksums.org as it didn't really end up as useful at this time.

* 0.0.9 - 2017-08-17
** Added
[CHAR] was incorporated into stage3 FORTH to reduce ascii lookup
UNTIL was incorporated into stage3 FORTH
'DODOES was incorporated into stage2 FORTH
LATEST! was incorporated into stage2 FORTH
R@ was incorporated into stage2 FORTH
DODOES was incorporated into stage2 FORTH
DOVAR was incorporated into stage2 FORTH
Added a variable BASE to control what base numbers are printed in stage3 FORTH
Added BOUNDS for common setup for sequence-iterating loops in stage3 FORTH
Added region-comment "(" (note that it doesn't nest) to stage3 FORTH
Added hex dump printer DUMP and support words to stage3 FORTH
Added DOES> and supporting words, and used it to make VARIABLE, CONSTANT, and DEFER in stage3 FORTH
Added TUCK, MIN, SPACES, :NONAME, FILL, and <> to stage3 FORTH
Added LSHIFT and RSHIFT to stage2 FORTH
Added PRINT to stage2 FORTH